Bug 461751 - zoomAndPan=disable prevents programmatic zoom. r+sr=roc